# acuity

./: LICENSE  README.md
generator/: pyproject.toml
generator/talk2metadata/: __init__.py
generator/talk2metadata/agent/: __init__.py  base.py  factory.py  wrapper.py
generator/talk2metadata/agent/providers/: __init__.py  anthropic.py  custom.py  doubao.py  gemini.py  huggingface.py  ollama.py  openai.py  vllm.py
generator/talk2metadata/analysis/: __init__.py
generator/talk2metadata/analysis/bird/: __init__.py  downloader.py
generator/talk2metadata/analysis/kaggledbqa/: __init__.py  downloader.py
generator/talk2metadata/analysis/sparc/: __init__.py  analyzer.py
generator/talk2metadata/analysis/spider/: __init__.py  analyzer.py  downloader.py  models.py  query_analyzer.py  schema_aware_query_analyzer.py
generator/talk2metadata/analysis/tpch/: __init__.py  analyzer.py  queries.py
generator/talk2metadata/analysis/wikisql/: __init__.py  analyzer.py
generator/talk2metadata/cli/: __init__.py  __main__.py  cli_main.py
generator/talk2metadata/cli/commands/: __init__.py  analysis_group.py  qa.py  schema_group.py  search_group.py  utils_group.py
generator/talk2metadata/cli/decorators/: __init__.py  error_handling.py  options.py
generator/talk2metadata/cli/handlers/: __init__.py  evaluation_handler.py  index_handler.py  ingest_handler.py  prepare_handler.py  qa_handler.py  schema_handler.py  search_handler.py
generator/talk2metadata/cli/output/: __init__.py
generator/talk2metadata/cli/utils/: __init__.py  loaders.py
generator/talk2metadata/connectors/: __init__.py  base.py  csv_loader.py  db_connector.py  registry.py
generator/talk2metadata/core/: __init__.py
generator/talk2metadata/core/qa/: __init__.py  benchmark_runner.py  bertscore.py  column_type_inference.py  difficulty_classifier.py  exporter.py  generator.py  qa_pair.py  query_builder.py  question_generator.py  report_plots.py  report_summary.py  retrieval_eval.py  sql_parser.py  strategy_analyzer.py  strategy_selector.py  tgr_data_builder.py  topology_annotator.py  verifier.py
generator/talk2metadata/core/qa/baselines/: __init__.py  direct_llm.py  random_sql.py
generator/talk2metadata/core/schema/: __init__.py  fk_detector_agent.py  fk_detector_base.py  fk_detector_rule.py  schema.py  schema_viz.py  types.py
generator/talk2metadata/core/solution/hybrid/: __init__.py  retriever.py
generator/talk2metadata/core/solution/modes/: __init__.py  comparison.py  graph.py  lexical.py  registry.py  semantic.py  text2sql.py
generator/talk2metadata/core/solution/paths/: __init__.py
generator/talk2metadata/core/solution/paths/graph/: __init__.py  indexer.py  knowledge_graph.py  retriever.py
generator/talk2metadata/core/solution/paths/lexical/: __init__.py  indexer.py  retriever.py
generator/talk2metadata/core/solution/paths/semantic/: __init__.py  indexer.py  retriever.py  search_result.py
generator/talk2metadata/core/solution/paths/text2sql/: __init__.py  base.py  direct_retriever.py  few_shot_manager.py  indexer.py  two_step_retriever.py
generator/talk2metadata/core/solution/paths/text2sql/finetuning/: __init__.py  eval_harness.py  finetuned.py  train.py  train_grpo.py
generator/talk2metadata/core/solution/preprocess/: __init__.py  base.py  builtins.py  pipeline.py  registry.py
generator/talk2metadata/core/solution/preprocess/query_rewrite/: __init__.py
generator/talk2metadata/core/solution/preprocess/schema_linking/: __init__.py
generator/talk2metadata/mcp/: __init__.py  asgi.py  cli.py  config.py  server.py
generator/talk2metadata/mcp/auth/: __init__.py  oauth_proxy.py  oidc_client.py
generator/talk2metadata/mcp/common/: __init__.py  retriever.py  schema_index.py
generator/talk2metadata/mcp/prompts/: __init__.py  help.py  search_guide.py
generator/talk2metadata/mcp/resources/: __init__.py
generator/talk2metadata/mcp/static/: console.js
generator/talk2metadata/mcp/tools/: __init__.py  get_schema.py  get_table_info.py  list_tables.py  search.py
generator/talk2metadata/metrics/: __init__.py  retrieval.py  runtime.py  sql.py
generator/talk2metadata/utils/: config.py  csv_to_db.py  json_utils.py  logging.py  paths.py  timing.py
prompts/: evaluation_prompt.txt  faithfulness_judge_prompt.txt  paraphraser_prompt.txt
results/: bird_power_subsample.json  contamination_probe.json  cost_reconstruction.json  (+44 more)
(+6754 files in other folders)
